--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,4 +1,4 @@
-<h1>new message</h1>
+<h1>New Message</h1>
 
 <%= form_with(model: [ @message.room, @message ]) do |form| %>
     <div class="field">
