--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,14 +1,15 @@
 <p id="notice"><%= notice %></p>
-
-<p>
-    <strong>Name:</strong>
-    <%= @room.name %>
-</p>
-
-<p>
-    <%= link_to 'Edit', edit_room_path(@room) %>
-    <%= link_to 'Back', rooms_path %>
-</p>
+<%= turbo_frame_tag "room" do %>
+  <p>
+      <strong>Name:</strong>
+      <%= @room.name %>
+  </p>
+  
+  <p>
+      <%= link_to 'Edit', edit_room_path(@room) %>
+      <%= link_to 'Back', rooms_path %>
+  </p>
+<% end %>
 
 <div id="messages">
     <%= render @room.messages %>
